--- a/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-entradas.html
@@ -19,7 +19,7 @@
     <div class="d-flex flex-wrap align-items-center justify-content-between mb-4">
         <div>
             <h4 class="mb-3">Listado de Entradas</h4>
-            <p class="mb-0"> Listado de Entradas registrados en plataforma </p>
+            <p class="mb-0"> Listado de Entradas registrados en plataforma</p>
         </div>
         <button data-table-id="suppliersTable" class="btn btn-success btnExportar">
             <i class="fas fa-file-excel"></i> Exportar datos a Excel
@@ -159,6 +159,44 @@
     </div>
 </div>
 
+
+<script>
+    $(document).ready(function () {
+        var tabla = $('#suppliersTable').DataTable({
+            "language": {
+                "search": "Buscar:",
+                "lengthMenu": "Mostrar _MENU_ entradas",
+                "info": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
+                "infoEmpty": "Mostrando 0 a 0 de 0 entradas",
+                "infoFiltered": "(filtrado de _MAX_ entradas totales)",
+                "zeroRecords": "No se encontraron resultados",
+                "emptyTable": "No hay datos disponibles en la tabla",
+                "paginate": {
+                    "first": "Primero",
+                    "previous": "Anterior",
+                    "next": "Siguiente",
+                    "last": "Último"
+                }
+            },
+            "initComplete": function () {
+                var encabezado = $('#suppliersTable thead tr').eq(0); // Obtener la primera fila del encabezado
+                this.api().columns().every(function () {
+                    var columna = this;
+                    var input = $('<input type="text" placeholder="Buscar..."/>')
+                        //.appendTo($('<th>').appendTo(encabezado).empty()) // Agregar el campo de búsqueda en una nueva celda de encabezado vacía
+                        .on('keyup change clear', function () {
+                            if (columna.search() !== this.value) {
+                                columna
+                                    .search(this.value)
+                                    .draw();
+                            }
+                        });
+                });
+            },
+            "ordering": false // Esta opción deshabilita la funcionalidad de ordenamiento
+        });
+    });
+</script>
 
 
 <!--<script>
