--- a/inventarios/inventarios/staticfiles/templates/html/app/todo.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/todo.html
@@ -640,8 +640,8 @@
 
             let tableExport = new TableExport(tabla, {
                 exportButtons: false, // No queremos botones
-                filename: "Reporte de prueba", // Nombre del archivo de Excel
-                sheetname: "Reporte de prueba", // Título de la hoja
+                filename: "Reporte", // Nombre del archivo de Excel
+                sheetname: "Reporte", // Título de la hoja
             });
 
             let datos = tableExport.getExportData();
